# Organizador

./: .gitignore  README.md  alterações.md  pyproject.toml
organizador/: pyproject.toml
organizer/: pyvenv.cfg
src/data/: blackList.json  historico.db  rules.json
src/interface/: About.py  Config.py  Home.py  Sidebar.py  Statistics.py  main.py  provi.py
src/interface/themes/: organize.json  organize_1.json
src/organizador/: blacklist.py  classifier.py  identify.py  mover.py  renamer.py  rules.py  scanner.py  varredura.py
src/organizador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/organizador/IA/: classificador.joblib  dataset_balanceado_600.csv  finetuning.py  textos_para_predicao.csv  treino.csv  treino.py
src/organizador/model/: db.py
