[project]
name = "organizador"
version = "0.1.0"
description = ""
authors = [
    { name = "Benin10-bit", email = "beniciodoamaralneto2019@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "pathlib>=1.0.1,<2.0.0",
    "customtkinter>=5.2.1,<6.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "joblib>=1.3.2,<2.0.0"
]

[project.scripts]
dev = "interface.main:run"
treino = "organizador.IA.treino:run"
scan = "organizador.scanner:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
