[project]
name = "organizador"
version = "0.1.0"
description = ""
authors = [
    { name = "Benin10-bit", email = "beniciodoamaralneto2019@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core
    "pandas>=2.3.3,<3.0.0",
    "pathlib>=1.0.1,<2.0.0",

    # Interface
    "customtkinter>=5.2.1,<6.0.0",
]

[project.scripts]
dev = "interface.main:run"
treino = "organizador.IA.treino:run"
finetuning = "organizador.IA.finetuning:run"
scan = "organizador.scanner:run"
ban = "organizador.blacklist:add"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
